setup/Istio/gateways/00_namespace_gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: istio-gateways
    name: istio-gateways
    istio.io/dataplane-mode: ambient    
spec:
  finalizers:
  - kubernetes
