setup/Istio/gateways/02_gateways.yaml
---
# This Gateway configures ingress for slainte service with HTTP to HTTPS redirection.
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: slainte-at
  namespace: istio-gateways
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - hosts:
    - "*"
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true # sends 301 redirect for http requests
  - hosts:
    - "slainte.at"
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: slainte-at-tls # must be the same as secret
  - hosts:
    - "*.${K8S_ENVIRONMENT}.slainte.at"
    port:
      name: httpsmutual
      number: 443
      protocol: HTTPS
    tls:
      mode: MUTUAL
      credentialName: slainte-at-mutual-tls # must be the same as secret
---
