setup/Istio/gateways/40_istio_prometheus.yaml
---
# VirtualService routing for host ${K8S_ENVIRONMENT}.istio-prometheus.slainte.at to prometheus service
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: istio-prometheus-dashboard
  namespace: istio-system
spec:
  hosts:
    - "${K8S_ENVIRONMENT}.istio-prometheus.slainte.at"
  gateways:
    - "istio-system/http-slainte-gateway"
  http:
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          host: prometheus.istio-system.svc.cluster.local
          port:
            number: 9090
---
